test/link/script-different-type.out
error: script-different-type.link(2): "ROM1" is specified to be a SRAM section, but it is already a ROMX section
Linking failed with 1 error
